--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "test": "mocha"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^5.12.3",
-    "ejs": "^3.1.6"
+    "ejs": "^3.1.6",
+    "express": "^4.19.2",
+    "mongoose": "^5.13.22"
   },
   "devDependencies": {
     "chai": "^5.1.1",
